@@ -1,5 +1,12 @@
 2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 
 
+	* unichrome/via_accel.c: (viaAccelDMADownload),
+	(viaExaDownloadFromScreen), (viaInitExa):
+
+	Indent via_accel.c
+
+2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 
+
 	* unichrome/via_accel.c: (viaAccelDMADownload):
 
 	Fix download from screen which was reusing kernel argument
